# Image-Sorter

./: .gitignore  ImageGalleryLogic.py  README.md  environment.yml  folderDropArea.py  gui.py  imagesManager.py  main.py  requirements.txt
.github/workflows/: build.yml  windows_build.yml
src/: imports.py  main.py
src/cpp/: CMakeLists.txt  image_utils.cpp
src/image_sorter/: GuiHandler.py  ImagesManager.py
src/image_sorter/.github/workflows/: build.yml
src/image_sorter/backend/: ImagesLogicManager.py
src/image_sorter/cpp/: CMakeLists.txt  ImageProcessor.cpp  ThumbnailResizer.cpp  image_utils.cpp  test.py  thumbnailResizer.cpp  thumbnail_utils.cpp
src/image_sorter/cpp/include/: ImageProcessor.h  ThumbnailResizer.h  thumbnailResizer.h
src/image_sorter/gui/: GuiHandler.py  ImageDisplayManager.py  SidebarManager.py  ThumbnailWorker.py
src/image_sorter/gui/PYQT_Ui_File/: ImageViewer.ui  image_viewer.ui  style.qss
